[ReleaseNotes] docs: Sync the latest modifications for `Config_v1.3.0.pdf`